--- a/Innovzen/res/layout-land/fragment_mysession_mid.xml
+++ b/Innovzen/res/layout-land/fragment_mysession_mid.xml
@@ -266,7 +266,7 @@
 
     <ImageView
         android:id="@+id/image_beginner"
-         android:visibility="gone"
+      android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_4"
@@ -297,18 +297,19 @@
         android:background="@drawable/time_pro"
         android:visibility="gone" />
     
-    <!-- customise -->
-    <com.innovzen.ui.CircleProgressBar
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
+ <!-- 自定义 -->
+      <com.innovzen.ui.ZJBCircleSeekBar  
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignBottom="@id/mid_left_vertical_4"
-        android:layout_alignLeft="@id/mid_top_horizontal_3"
-        android:layout_alignRight="@id/mid_top_horizontal_3"
-        android:layout_alignTop="@id/mid_left_vertical_4"
-      
-               />
-        
-        
+        android:layout_alignLeft="@id/mid_top_horizontal_1"
+        android:layout_alignRight="@id/mid_top_horizontal_6"
+        android:layout_alignTop="@id/mid_left_vertical_1"
+        android:layout_centerInParent="true" 
+        android:thumb="@drawable/volume_cursor"
+       
+        /> 
+    
     
 
     <TextView
