--- a/Innovzen/res/values/attrs.xml
+++ b/Innovzen/res/values/attrs.xml
@@ -44,5 +44,21 @@
         <attr name="rate_up" format="integer" />
         <attr name="rate_down" format="integer" />
     </declare-styleable>
-    
+    <!--  -->
+    <declare-styleable name="HoloCircleSeekBar">  
+        <attr name="wheel_size" format="integer" />  
+        <attr name="pointer_size" format="integer" />  
+        <attr name="max1" format="integer"></attr>  
+        <attr name="show_text" format="boolean"></attr>  
+        <attr name="start_angle1" format="integer"></attr>  
+        <attr name="end_angle1" format="integer"></attr>  
+        <attr name="text_size" format="integer"></attr>  
+        <attr name="init_position" format="integer"></attr>  
+        <attr name="color" format="string"></attr>  
+        <attr name="wheel_active_color" format="string"></attr>  
+        <attr name="wheel_unactive_color" format="string"></attr>  
+        <attr name="pointer_color1" format="string"></attr>  
+        <attr name="pointer_halo_color1" format="string"></attr>  
+        <attr name="text_color" format="string"></attr>  
+    </declare-styleable>
 </resources>
