--- a/Innovzen/res/layout-land/fragment_mysession_mid.xml
+++ b/Innovzen/res/layout-land/fragment_mysession_mid.xml
@@ -44,7 +44,7 @@
         android:layout_below="@id/mid_left_vertical_3"
         layout:orientation="true"
         layout:rate_down="42"
-        layout:rate_up="14" />
+        layout:rate_up="1" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_left_vertical_5"
@@ -54,7 +54,7 @@
         android:layout_below="@id/mid_left_vertical_4"
         layout:orientation="true"
         layout:rate_down="42"
-        layout:rate_up="2" />
+        layout:rate_up="14" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_left_vertical_6"
@@ -64,7 +64,17 @@
         android:layout_below="@id/mid_left_vertical_5"
         layout:orientation="true"
         layout:rate_down="42"
-        layout:rate_up="3" />
+        layout:rate_up="2" />
+
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/mid_left_vertical_7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/mid_left_vertical_6"
+        layout:orientation="true"
+        layout:rate_down="42"
+        layout:rate_up="2" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_1"
@@ -74,7 +84,7 @@
         android:layout_toRightOf="@id/mid_left_vertical_1"
         layout:orientation="false"
         layout:rate_down="220"
-        layout:rate_up="5" />
+        layout:rate_up="4" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_2"
@@ -84,7 +94,7 @@
         android:layout_toRightOf="@id/mid_top_horizontal_1"
         layout:orientation="false"
         layout:rate_down="220"
-        layout:rate_up="3" />
+        layout:rate_up="5" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_3"
@@ -94,7 +104,7 @@
         android:layout_toRightOf="@id/mid_top_horizontal_2"
         layout:orientation="false"
         layout:rate_down="220"
-        layout:rate_up="49" />
+        layout:rate_up="7" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_4"
@@ -104,7 +114,7 @@
         android:layout_toRightOf="@id/mid_top_horizontal_3"
         layout:orientation="false"
         layout:rate_down="220"
-        layout:rate_up="3" />
+        layout:rate_up="34" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_5"
@@ -114,7 +124,7 @@
         android:layout_toRightOf="@id/mid_top_horizontal_4"
         layout:orientation="false"
         layout:rate_down="220"
-        layout:rate_up="49" />
+        layout:rate_up="5" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_6"
@@ -124,7 +134,7 @@
         android:layout_toRightOf="@id/mid_top_horizontal_5"
         layout:orientation="false"
         layout:rate_down="220"
-        layout:rate_up="2" />
+        layout:rate_up="5" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_7"
@@ -144,7 +154,7 @@
         android:layout_toRightOf="@id/mid_top_horizontal_7"
         layout:orientation="false"
         layout:rate_down="220"
-        layout:rate_up="3" />
+        layout:rate_up="2" />
 
     <com.innovzen.ui.MeasureView
         android:id="@+id/mid_top_horizontal_9"
@@ -174,6 +184,26 @@
         android:layout_toRightOf="@id/mid_top_horizontal_10"
         layout:orientation="false"
         layout:rate_down="220"
+        layout:rate_up="49" />
+
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/mid_top_horizontal_12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/mid_top_horizontal_11"
+        layout:orientation="false"
+        layout:rate_down="220"
+        layout:rate_up="3" />
+
+    <com.innovzen.ui.MeasureView
+        android:id="@+id/mid_top_horizontal_13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/mid_top_horizontal_12"
+        layout:orientation="false"
+        layout:rate_down="220"
         layout:rate_up="5" />
 
     <ImageView
@@ -182,7 +212,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
         android:layout_alignLeft="@id/mid_top_horizontal_2"
-        android:layout_alignRight="@id/mid_top_horizontal_4"
+        android:layout_alignRight="@id/mid_top_horizontal_6"
         android:layout_alignTop="@id/mid_left_vertical_2"
         android:background="@drawable/selector_icon_beginner" />
 
@@ -191,8 +221,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
-        android:layout_alignLeft="@id/mid_top_horizontal_5"
-        android:layout_alignRight="@id/mid_top_horizontal_6"
+        android:layout_alignLeft="@id/mid_top_horizontal_7"
+        android:layout_alignRight="@id/mid_top_horizontal_8"
         android:layout_alignTop="@id/mid_left_vertical_2"
         android:background="@drawable/selector_icon_intermadiate" />
 
@@ -201,8 +231,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
-        android:layout_alignLeft="@id/mid_top_horizontal_7"
-        android:layout_alignRight="@id/mid_top_horizontal_8"
+        android:layout_alignLeft="@id/mid_top_horizontal_9"
+        android:layout_alignRight="@id/mid_top_horizontal_10"
         android:layout_alignTop="@id/mid_left_vertical_2"
         android:background="@drawable/selector_icon_pro" />
 
@@ -211,8 +241,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_2"
-        android:layout_alignLeft="@id/mid_top_horizontal_9"
-        android:layout_alignRight="@id/mid_top_horizontal_10"
+        android:layout_alignLeft="@id/mid_top_horizontal_11"
+        android:layout_alignRight="@id/mid_top_horizontal_12"
         android:layout_alignTop="@id/mid_left_vertical_2"
         android:background="@drawable/selector_icon_customise" />
 
@@ -220,20 +250,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_3"
-        android:layout_alignLeft="@id/mid_top_horizontal_3"
-        android:layout_alignRight="@id/mid_top_horizontal_3"
-        android:layout_alignTop="@id/mid_left_vertical_3"
-        android:gravity="center"
-        android:text="MAX 30 sec"
-        android:textColor="#FF6D7172"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_3"
-        android:layout_alignLeft="@id/mid_top_horizontal_5"
-        android:layout_alignRight="@id/mid_top_horizontal_5"
+        android:layout_alignLeft="@id/mid_top_horizontal_4"
+        android:layout_alignRight="@id/mid_top_horizontal_4"
         android:layout_alignTop="@id/mid_left_vertical_3"
         android:gravity="center"
         android:text="MAX 30 sec"
@@ -258,6 +276,18 @@
         android:layout_alignBottom="@id/mid_left_vertical_3"
         android:layout_alignLeft="@id/mid_top_horizontal_9"
         android:layout_alignRight="@id/mid_top_horizontal_9"
+        android:layout_alignTop="@id/mid_left_vertical_3"
+        android:gravity="center"
+        android:text="MAX 30 sec"
+        android:textColor="#FF6D7172"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/mid_left_vertical_3"
+        android:layout_alignLeft="@id/mid_top_horizontal_11"
+        android:layout_alignRight="@id/mid_top_horizontal_11"
         android:layout_alignTop="@id/mid_left_vertical_3"
         android:gravity="center"
         android:text="MAX 30 sec"
@@ -268,9 +298,9 @@
         android:id="@+id/image_beginner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_4"
+        android:layout_alignBottom="@id/mid_left_vertical_5"
         android:layout_alignLeft="@id/mid_top_horizontal_2"
-        android:layout_alignRight="@id/mid_top_horizontal_9"
+        android:layout_alignRight="@id/mid_top_horizontal_12"
         android:layout_alignTop="@id/mid_left_vertical_4"
         android:background="@drawable/time_beginner"
         android:visibility="gone" />
@@ -279,9 +309,9 @@
         android:id="@+id/image_intermediate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_4"
+        android:layout_alignBottom="@id/mid_left_vertical_5"
         android:layout_alignLeft="@id/mid_top_horizontal_2"
-        android:layout_alignRight="@id/mid_top_horizontal_9"
+        android:layout_alignRight="@id/mid_top_horizontal_12"
         android:layout_alignTop="@id/mid_left_vertical_4"
         android:background="@drawable/time_intermediate"
         android:visibility="gone" />
@@ -290,9 +320,9 @@
         android:id="@+id/image_pro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_4"
+        android:layout_alignBottom="@id/mid_left_vertical_5"
         android:layout_alignLeft="@id/mid_top_horizontal_2"
-        android:layout_alignRight="@id/mid_top_horizontal_9"
+        android:layout_alignRight="@id/mid_top_horizontal_12"
         android:layout_alignTop="@id/mid_left_vertical_4"
         android:background="@drawable/time_pro"
         android:visibility="gone" />
@@ -300,37 +330,39 @@
     <!-- 自定义 -->
 
     <com.innovzen.ui.ZJBCircleSeekBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_alignBottom="@id/mid_left_vertical_4"
-        android:layout_alignLeft="@id/mid_top_horizontal_3"
-        android:layout_alignRight="@id/mid_top_horizontal_3"
-        android:layout_alignTop="@id/mid_left_vertical_4"
-        android:layout_centerInParent="true"
-        
-        android:thumb="@drawable/volume_cursor" />
-    
-         <TextView 
-             android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="22dp"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/circular_seekbar_core"
-        android:layout_alignBottom="@id/mid_left_vertical_4"
-        android:layout_alignLeft="@id/mid_top_horizontal_3"
-        android:layout_alignRight="@id/mid_top_horizontal_3"
-        android:layout_alignTop="@id/mid_left_vertical_4"
-        />
-    
-
-    <TextView
+        android:id="@+id/customise_breathe_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/mid_left_vertical_5"
         android:layout_alignLeft="@id/mid_top_horizontal_3"
-        android:layout_alignRight="@id/mid_top_horizontal_3"
-        android:layout_alignTop="@id/mid_left_vertical_5"
+        android:layout_alignRight="@id/mid_top_horizontal_6"
+        android:layout_alignTop="@id/mid_left_vertical_4"
+        android:layout_centerInParent="true"
+       
+        android:thumb="@drawable/volume_cursor" />
+
+    <TextView
+        android:id="@+id/customise_breathe_in_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/mid_left_vertical_5"
+        android:layout_alignLeft="@id/mid_top_horizontal_3"
+        android:layout_alignRight="@id/mid_top_horizontal_4"
+        android:layout_alignTop="@id/mid_left_vertical_4"
+        android:background="@drawable/circular_seekbar_core" 
+        android:text="04"
+        android:textSize="80sp"
+        android:gravity="center"
+        android:textColor="#2495AB"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/mid_left_vertical_6"
+        android:layout_alignLeft="@id/mid_top_horizontal_4"
+        android:layout_alignRight="@id/mid_top_horizontal_5"
+        android:layout_alignTop="@id/mid_left_vertical_6"
         android:gravity="center_horizontal"
         android:text="Breathe in time"
         android:textColor="#FF6D7172" />
@@ -338,10 +370,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_5"
-        android:layout_alignLeft="@id/mid_top_horizontal_5"
-        android:layout_alignRight="@id/mid_top_horizontal_5"
-        android:layout_alignTop="@id/mid_left_vertical_5"
+        android:layout_alignBottom="@id/mid_left_vertical_6"
+        android:layout_alignLeft="@id/mid_top_horizontal_7"
+        android:layout_alignRight="@id/mid_top_horizontal_7"
+        android:layout_alignTop="@id/mid_left_vertical_6"
         android:gravity="center_horizontal"
         android:text="Hold time 3/4"
         android:textColor="#FF6D7172" />
@@ -349,10 +381,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_5"
-        android:layout_alignLeft="@id/mid_top_horizontal_7"
-        android:layout_alignRight="@id/mid_top_horizontal_7"
-        android:layout_alignTop="@id/mid_left_vertical_5"
+        android:layout_alignBottom="@id/mid_left_vertical_6"
+        android:layout_alignLeft="@id/mid_top_horizontal_9"
+        android:layout_alignRight="@id/mid_top_horizontal_9"
+        android:layout_alignTop="@id/mid_left_vertical_6"
         android:gravity="center_horizontal"
         android:text="Breathe out time"
         android:textColor="#FF6D7172" />
@@ -360,10 +392,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_5"
-        android:layout_alignLeft="@id/mid_top_horizontal_9"
-        android:layout_alignRight="@id/mid_top_horizontal_9"
-        android:layout_alignTop="@id/mid_left_vertical_5"
+        android:layout_alignBottom="@id/mid_left_vertical_6"
+        android:layout_alignLeft="@id/mid_top_horizontal_11"
+        android:layout_alignRight="@id/mid_top_horizontal_11"
+        android:layout_alignTop="@id/mid_left_vertical_6"
         android:gravity="center_horizontal"
         android:text="Hold time"
         android:textColor="#FF6D7172" />
@@ -415,10 +447,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_6"
+        android:layout_alignBottom="@id/mid_left_vertical_7"
         android:layout_alignLeft="@id/mid_top_horizontal_5"
         android:layout_alignRight="@id/mid_top_horizontal_5"
-        android:layout_alignTop="@id/mid_left_vertical_6"
+        android:layout_alignTop="@id/mid_left_vertical_7"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:text="@string/full"
@@ -427,10 +459,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/mid_left_vertical_6"
+        android:layout_alignBottom="@id/mid_left_vertical_7"
         android:layout_alignLeft="@id/mid_top_horizontal_9"
         android:layout_alignRight="@id/mid_top_horizontal_9"
-        android:layout_alignTop="@id/mid_left_vertical_6"
+        android:layout_alignTop="@id/mid_left_vertical_7"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
         android:text="@string/empty"
